[metadata]
name = plynk
version = 0.0.0+alpha
author = Stephen Hermes
url = https://github.com/stephenhermes/plynk
description = An incredibly thin Python wrapper for Plink.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = plynk
python_requires = >= 3.7
install_requires =
    pandas

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true